# rubiks-cube-tauri

./: .env  .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: solving-guide-video-script.html  solving-guide.html  solving-guide.md
src/: App.css  App.tsx  index.html  package-lock.json  分步解魔方设计方案.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/python_service/: README.md  adapter.py  app.py  app.spec  requirements.txt  rubiks_cube_backend.spec
src-tauri/src/: lib.rs  main.rs
src/components/: AxisHelper.tsx  ControlPanel.tsx  Cube3D.tsx  Cubie.tsx  CubieList.tsx  DebugPanel.tsx  InfoPanelOverlay.tsx  SolvingGuide.tsx
src/constants/: solvingStage.ts  solvingSteps.ts
src/hooks/: useCubeActions.ts  useCubeAnimation.ts  useResetOnUnload.ts
src/services/: cubeApi.ts
src/styles/: SolvingGuide.css  theme.ts
src/types/: cube.ts  solving.ts
src/utils/: cubeAnimationUtils.ts  cubeConstants.ts  cubeStateChecker.ts  cubeTypes.ts  cubeUtils.ts  solvingManager.ts
